# RAWcooked

./: .appveyor.yml  .travis.yml  History_CLI.txt  LICENSE  License.html  README.md
.github/workflows/: RAWcoocked_Checks.yml
Doc/: Case_study.md  Compilation.md  File_Stucture.md  README.md  User_Manual.md
Project/: version.txt
Project/Chocolatey/: rawcooked.nuspec
Project/Chocolatey/tools/: chocolateyinstall.ps1
Project/GNU/: PKGBUILD  rawcooked.dsc  rawcooked.spec
Project/GNU/CLI/: AddThisToRoot_CLI_compile.sh  Makefile.am  autogen  autogen.sh  configure.ac
Project/GNU/CLI/test/: avi.sh  avi.txt  check.sh  framerate.sh  framerate.txt  gaps.sh  hash.sh  hash.txt  helpers.sh  increasingdigitcount.sh  legacy.sh  legacy.txt  multiple.sh  notfound.sh  overwrite.sh  paddingbits.sh  paddingbits.txt  pcm.sh  reversibilityfile.sh  reversibilityfile.txt  slices.sh  slices.txt  test1.sh  test1.txt  test1b.sh  test1b.txt  test2.sh  test2.txt  test2full.txt  test3.sh  test3.txt  test3b.sh  test3b.txt  valgrind.sh  valgrind.txt  version.sh  vulkan.sh  vulkan.txt
Project/MSVC2017/: RAWCooked.sln  RAWcooked.sln
Project/MSVC2017/CLI/: RAWCooked.rc  RAWCooked_CLI.vcxproj  RAWcooked.rc  RAWcooked_CLI.vcxproj  RAWcooked_CLI.vcxproj.filters
Project/MSVC2017/Lib/: RAWCooked_Lib.vcxproj  RAWCooked_Lib.vcxproj.filters  RAWcooked_Lib.vcxproj  RAWcooked_Lib.vcxproj.filters
Project/MSVC2017/md5/: md5.vcxproj
Project/MSVC2019/: RAWcooked.sln
Project/MSVC2019/CLI/: RAWcooked.rc  RAWcooked_CLI.vcxproj  RAWcooked_CLI.vcxproj.filters
Project/MSVC2019/Lib/: RAWcooked_Lib.vcxproj  RAWcooked_Lib.vcxproj.filters
Project/MSVC2019/md5/: md5.vcxproj  md5.vcxproj.filters
Project/MSVC2022/: RAWcooked.sln
Project/MSVC2022/CLI/: RAWcooked_CLI.vcxproj
Project/MSVC2022/Lib/: RAWcooked_Lib.vcxproj  RAWcooked_Lib.vcxproj.filters
Project/MSVC2022/md5/: md5.vcxproj
Project/Mac/: BR_extension_CLI.sh  BR_extension_GUI.sh  Info.plist  Osascript_CLI.sh  Osascript_GUI.sh  mkdmg.sh
Project/Qt/: AddThisToRoot_GUI_compile.sh  Makefile  prepare  rawcooked-gui.desktop  rawcooked-gui.kde3.desktop  rawcooked-gui.kde4.desktop  rawcooked-gui.pro  rawcooked-gui.rc
Release/: Build_CLI_Windows_x64.ps1  Package_CLI_Windows_x64.ps1
Source/CLI/: Config.h  Global.cpp  Global.h  Help.cpp  Help.h  Input.cpp  Input.h  Main.cpp  Output.cpp  Output.h  rawcooked.1
Source/Install/: RAWCooked_GUI_Windows_x64.nsi  RAWcooked_GUI_Windows_x64.nsi
Source/Lib/: Config.h  Errors.cpp  Errors.h  FileIO.cpp  FileIO.h  Input_Base.cpp  Input_Base.h  License.cpp  License.h  License_Internal.h
Source/Lib/AIFF/: AIFF.cpp  AIFF.h
Source/Lib/BitStream/: BitStream.h
Source/Lib/CRC32/: CRC32.cpp  CRC32.h  ZenCRC32.cpp  ZenCRC32.h
Source/Lib/CoDec/: Wrapper.cpp  Wrapper.h
Source/Lib/CoDec/FFV1/: FFV1_Frame.cpp  FFV1_Frame.h  FFV1_Parameters.cpp  FFV1_Parameters.h  FFV1_RangeCoder.cpp  FFV1_RangeCoder.h  FFV1_Slice.cpp  FFV1_Slice.h
Source/Lib/CoDec/FFV1/Coder/: FFV1_Coder.h  FFV1_Coder_GolombRice.cpp  FFV1_Coder_GolombRice.h  FFV1_Coder_RangeCoder.cpp  FFV1_Coder_RangeCoder.h
Source/Lib/CoDec/FFV1/Transform/: FFV1_Transform_JPEG2000RCT.cpp  FFV1_Transform_JPEG2000RCT.h
Source/Lib/Common/: Common.cpp  Common.h
Source/Lib/Compressed/Matroska/: Matroska.cpp  Matroska.h
Source/Lib/Compressed/RAWcooked/: IntermediateWrite.cpp  IntermediateWrite.h  RAWcooked.cpp  RAWcooked.h  Reversibility.cpp  Reversibility.h  Track.cpp  Track.h
Source/Lib/DPX/: DPX.cpp  DPX.h
Source/Lib/FFV1/: FFV1_Frame.cpp  FFV1_Frame.h  FFV1_Parameters.cpp  FFV1_Parameters.h  FFV1_RangeCoder.cpp  FFV1_RangeCoder.h  FFV1_Slice.cpp  FFV1_Slice.h
Source/Lib/FFV1/Coder/: FFV1_Coder.h  FFV1_Coder_GolombRice.cpp  FFV1_Coder_GolombRice.h  FFV1_Coder_RangeCoder.cpp  FFV1_Coder_RangeCoder.h
Source/Lib/FFV1/Transform/: FFV1_Transform_JPEG2000RCT.cpp  FFV1_Transform_JPEG2000RCT.h
Source/Lib/FrameHash/: FrameHash_MD5.cpp  FrameHash_MD5.h
Source/Lib/HashSum/: HashSum.cpp  HashSum.h
Source/Lib/License/: License.cpp  License.h  License_Internal.h
Source/Lib/Matroska/: Matroska_Common.cpp  Matroska_Common.h
Source/Lib/RAWCooked/: RAWCooked.cpp  RAWCooked.h
Source/Lib/RAWcooked/: IntermediateWrite.cpp  IntermediateWrite.h  RAWcooked.cpp  RAWcooked.h
Source/Lib/RIFF/: RIFF.cpp  RIFF.h
Source/Lib/RawFrame/: RawFrame.cpp  RawFrame.h
Source/Lib/TIFF/: TIFF.cpp  TIFF.h
Source/Lib/Transform/: Transform.cpp  Transform.h
Source/Lib/Uncompressed/AIFF/: AIFF.cpp  AIFF.h
Source/Lib/Uncompressed/AVI/: AVI.cpp  AVI.h
Source/Lib/Uncompressed/DPX/: DPX.cpp  DPX.h
Source/Lib/Uncompressed/EXR/: EXR.cpp  EXR.h
Source/Lib/Uncompressed/HashSum/: HashSum.cpp  HashSum.h
Source/Lib/Uncompressed/TIFF/: TIFF.cpp  TIFF.h
Source/Lib/Uncompressed/WAV/: WAV.cpp  WAV.h
Source/Lib/Utils/BitStream/: BitStream.h
Source/Lib/Utils/Buffer/: Buffer.h
Source/Lib/Utils/CRC32/: ZenCRC32.cpp  ZenCRC32.h
Source/Lib/Utils/Errors/: Errors.cpp  Errors.h
Source/Lib/Utils/FileIO/: FileChecker.cpp  FileChecker.h  FileIO.cpp  FileIO.h  FileWriter.cpp  FileWriter.h  Input_Base.cpp  Input_Base.h
Source/Lib/Utils/FrameHash/: FrameHash_MD5.cpp  FrameHash_MD5.h
Source/Lib/Utils/RawFrame/: RawFrame.cpp  RawFrame.h
Source/Lib/WAV/: WAV.cpp  WAV.h
Source/Resource/: Resource.qrc
debian/: changelog  control  copyright  rawcooked-gui.dirs  rawcooked-gui.install  rawcooked.dirs  rawcooked.install  rules
